Fix for autoplay bug in chrome

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                             <div class="bb-item">
                                 <figure class="book-cover" id="book-cover-front">
-                                    <video class="mx-auto d-block" autoplay muted loop playsinline>
+                                    <video class="mx-auto d-block" muted autoplay loop playsinline>
                                         <source src="images/front_cover.webm" type="video/webm">
                                         <source src="images/front_cover.mp4" type="video/mp4">
                                         Your browser does not support HTML5 video.
