--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Dijkstra as a Comic</title>
     <meta name="description" content="The famous algorithm for finding shortest paths - Dijkstra's algorithm - in the form of a comic">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150087883-1"></script>
+    
+    <!-- Google tag (gtag.js)  - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-33WX8Q95L0"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-150087883-1');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-33WX8Q95L0');
     </script>
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
