Update website link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a href="https://in.linkedin.com/in/piyush-jaiswal-807b6110b" target="_blank">
                             <img src="images/linkedin.svg" alt="linkedin">
                         </a>
-                        <a href="https://piyushjaiswal.wixsite.com/piyushj" target="_blank">
+                        <a href="https://piyush-jaiswal.github.io" target="_blank">
                             <img src="images/info.svg" alt="personal-website">
                         </a>
                         <a href="mailto:piyushjf@gmail.com" target="_blank">
