Update github link to flipbook

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div><!-- flipbook -->
 
                     <address class="col-1">
-                        <a href="https://github.com/piyush-jaiswal" target="_blank">
+                        <a href="https://github.com/piyush-jaiswal/flipbook" target="_blank">
                             <img src="images/github.svg" alt="github">
                         </a>
                         <a href="https://in.linkedin.com/in/piyush-jaiswal-807b6110b" target="_blank">
